# os

kp/: CMakeLists.txt
kp/doc/: report.docx
kp/src/: main.cpp  mckk.cpp  mckk.hpp  pow_of_two.cpp  pow_of_two.hpp
lab_1/doc/: report.docx
lab_2/: CMakeLists.txt
lab_2/doc/: report.odt
lab_2/src/: child.c  child2.c  main.c
lab_3/: README.md
lab_3/doc/: .~lock.report.docx#  report.docx
lab_3/src/: CMakeLists.txt  main.c
lab_4/: README.md
lab_4/doc/: report.docx
lab_4/src/: CMakeLists.txt  child.c  child2.c  lab4_utils.h  main.c
lab_5/: README.md
lab_5/doc/: report.docx
lab_5/src/: Makefile  dyn_start.sh  lib5.h  lib5_v1.c  lib5_v2.c  main_dynamic.c  main_static.c
lab_6/: CMakeLists.txt
lab_6/doc/: report.docx
lab_6/src/: computing_node.c  lab6_utils.c  lab6_utils.h  list.c  list.h  manage_node.c
